  (Stephen Dolan, review by Xavier Leroy)

- #11418, #11708: RISC-V multicore support.
  (Nicolás Ojeda Bär, review by KC Sivaramakrishnan)

- #11686: Better spilling heuristic for the Linear Scan allocator for more
  efficient stack usage.
  (Nicolás Ojeda Bär, Gabriel Scherer, Alain Frisch, review by Gabriel Scherer,
  Alain Frisch and Nathanaëlle Courant)

### Standard library:

- #11410: Add Set.to_list, Map.to_list, Map.of_list, Map.add_to_list,
  (Daniel Bünzli, review by Nicolás Ojeda Bär and Gabriel Scherer)

- #11128: Add In_channel.isatty, Out_channel.isatty.
  (Nicolás Ojeda Bär, review by Gabriel Scherer and Florian Angeletti)

- #10859: Add `Format.pp_print_iter` and `Format.pp_print_array`.
  (Léo Andrès and Daniel Bünzli, review by David Allsopp and Hugo Heuzard)

- #10789: Add `Stack.drop`
  (Léo Andrès, review by Gabriel Scherer)

* #10899: Change Stdlib.nan from signaling NaN to quiet NaN.
  (Greta Yorsh, review by Xavier Leroy, Guillaume Melquiond and
  Gabriel Scherer)

- #11246: Add "hash" and "seeded_hash" functions to Bool, Int, Char, Float,
  Int32, Int64, and Nativeint.
  (Nicolás Ojeda Bär, review by Xavier Leroy and Gabriel Scherer)

- #11354: Hashtbl.find_all is now tail-recursive.
  (Fermín Reig, review by Gabriel Scherer)

- #11500: Make Hashtbl.mem non-allocating.
  (Simmo Saan, review by Nicolás Ojeda Bär)

- #11362: Rewrite List.map, List.mapi and List.map2 using TRMC, making them
  faster as well as tail-recursive.
  (Nicolás Ojeda Bär, review by Gabriel Scherer)

- #11412: Add Sys.is_regular_file
  (Xavier Leroy, review by Anil Madhavapeddy, Nicolás Ojeda Bär, David Allsopp)

- #11402: Rewrite List.init, List.filter, List.filteri, List.filter_map and
  List.of_seq using TRMC instead of an accumulator, making them faster and
  halving memory usage while remaining tail-recursive.
  (Nicolás Ojeda Bär, review by Xavier Leroy and Gabriel Scherer)

- #11476: Add examples in documentation of Hashtbl, Queue, Atomic, Format