@@ -107,6 +107,11 @@ let map f a =
     r
   end
 
+let map_inplace f a =
+  for i = 0 to length a - 1 do
+    unsafe_set a i (f (unsafe_get a i))
+  done
+
 let map2 f a b =
   let la = length a in
   let lb = length b in
