@@ -129,3 +129,11 @@ let (_ : (_ * unit array)) =
 [%%expect{|
 - : int * unit array = (0, [||])
 |}]
+
+let a : int array =
+  let a = [| 1 ; 2 ; 3 ; 4 |] in
+  Array.map_inplace (fun x -> 2 * x) a;
+  a
+[%%expect{|
+val a : int array = [|2; 4; 6; 8|]
+|}]
