@@ -72,6 +72,9 @@ Working version
 
 ### Standard library:
 
+- #11836: Add `Array.map_inplace`.
+  (Léo Andrès, review by Gabriel Scherer and KC Sivaramakrishnan)
+
 - #11410: Add Set.to_list, Map.to_list, Map.of_list, Map.add_to_list,
   (Daniel Bünzli, review by Nicolás Ojeda Bär and Gabriel Scherer)
 
